http / update fix